# miemienet

./: .gitignore  CMakeLists.txt  README.md  README_en.md  build.py  calc_delete_param.py  calc_delete_tensor.py  del.txt  gen_code.py  miemienet.sln  miemienet.vcxproj  miemienet.vcxproj.filters  mmmmmmmmmmmmm.txt  modify_SIMD_code.py
miemiedet/: miemiedet.h
miemiedet/models/architectures/: picodet.cpp  picodet.h  ppyoloe.cpp  ppyoloe.h
miemiedet/models/backbones/: cspresnet.cpp  cspresnet.h  lcnet.cpp  lcnet.h
miemiedet/models/heads/: pico_head.cpp  pico_head.h  ppyoloe_head.cpp  ppyoloe_head.h
miemiedet/models/necks/: csp_pan.cpp  csp_pan.h  custom_pan.cpp  custom_pan.h
miemienet/: macros.h  miemienet.cpp  miemienet.h
miemienet/framework/: config.cpp  config.h  layer.cpp  layer.h  memoryallocator.cpp  memoryallocator.h  tensor.cpp  tensor.h  tensoridmanager.cpp  tensoridmanager.h
miemienet/nn/: activation.cpp  activation.h  avgpool2d.cpp  avgpool2d.h  concat.cpp  concat.h  conv2d.cpp  conv2d.h  interp.cpp  interp.h  layerlist.cpp  layerlist.h  maxpool2d.cpp  maxpool2d.h  reduce.cpp  reduce.h  sequential.cpp  sequential.h  softmax.cpp  softmax.h  transpose.cpp  transpose.h
miemienet/nn/common/: activation_common.cpp  activation_common.h  avgpool2d_common.cpp  avgpool2d_common.h  concat_common.cpp  concat_common.h  conv2d_common.cpp  conv2d_common.h  elementwise_common.cpp  elementwise_common.h  interp_common.cpp  interp_common.h  matmul_common.cpp  matmul_common.h  maxpool2d_common.cpp  maxpool2d_common.h  reduce_common.cpp  reduce_common.h  softmax_common.cpp  softmax_common.h  transpose_common.cpp  transpose_common.h
python_SIMD_simulator/: SIMD_tools.py  test2_000_avx.cpp  test2_000_avx.py
test/: convert_ppdet_tools.py  cspresnet.py  custom_pan.py  ppyoloe_head.py  resnet.py  test2_00000_add.cpp  test2_00000_gcc.cpp  test2_00000_matmul.cpp  test2_00000_matmul.py  test2_00000_matmul2.cpp  test2_00000_opencv.cpp  test2_00001_ele.cpp  test2_00001_ele.py  test2_00002_matmul.py  test2_00002_matmul2.cpp  test2_00002_matmul3.cpp  test2_00002_matmul4.cpp  test2_00002_matmul5.cpp  test2_00003_im2col.cpp  test2_00003_im2col.py  test2_00003_winograd.cpp  test2_00003_winograd.py  test2_00003_winograd_tools.py  test2_00004_conv2d.cpp  test2_00004_conv2d.py  test2_00005_transpose.cpp  test2_00005_transpose.py  test2_00006_act.cpp  test2_00006_act.py  test2_000_matmul.cu  test2_001_conv_mm_x86.cpp  test2_001_conv_torch.py  test2_002_ppyoloe_mm_x86.cpp  test2_002_ppyoloe_torch.py  test2_003_Astar.py  test2_utils.py  test_objectdet.cpp
